Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3439

Chunked responses don't honor keep-alive

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.2.1, 5.3.0
    • None
    • None

    Description

      If you have ATS configured with keep_alive out disabled, and an origin that responds with transfer-encoding chunked ATS puts the connection on the keepalive pool after the transfer is finished. Since keep_alive_out is disabled the request contains a connection close header. This means that we now have a race condition between the origin actually closing the tcp session (assuming its well behaved) and ATS re-using that keep-alive session (which it shouldn't have kept).

      This means not only are we disobeying the configuration (which specified no keep-alive) but we are "breaking" connections-- as they will 502 (since the tunnel will be shutdown).

      test case: https://github.com/jacksontj/trafficserver/commit/e221e91ad6466ef840f74a1016b8d51c821eb1e9#diff-ed49610150c2617c50f28a047a07c126R130

      Attachments

        Activity

          People

            briang Brian Geffon
            jacksontj Thomas Jackson
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: