TS-3439: Chunked responses don't honor keep-alive